# dlinear

./: .bazelignore  .bazelrc  .dockerignore  .gitattributes  .gitignore  BUILD.bazel  CPPLINT.cfg  Dockerfile  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  pyproject.toml  setup.py
benchmark/: BUILD.bazel  BenchmarkProgram.cpp  BenchmarkProgram.h  benchmark.conf  benchmark.py  benchmarks.sh  lp_benchmark_parser.py  main.cpp
benchmark/parser/: base_parser.py  csv_parser.py  json_parser.py  parser_args.py  run.py
benchmark/python_bench/: args.py  benchmark.py  util.py
benchmark/script/: LP.sh  LP2.sh  QF_LRA.sh  SS.sh  cvc5_lp.sh  dlinear_lp_0.001.sh  dlinear_lp_0.1.sh  dlinear_lp_0.sh  dlinear_lp_complete.sh  yices_lp.sh  z3_lp.sh
benchmark/util/: BUILD.bazel  BenchArgParser.cpp  BenchArgParser.h  BenchConfig.cpp  BenchConfig.h  ConfigFileReader.cpp  ConfigFileReader.h  InfoGatherer.cpp  InfoGatherer.h
dlinear/: BUILD.bazel  MainProgram.cpp  MainProgram.h  argparser.cpp  dlinear.h  libs.cpp  main.cpp  onnx.cpp  soplex.cpp  test.cpp
dlinear/api/: BUILD.bazel  api.cpp  api.h
dlinear/libs/: BUILD.bazel  gmp.cpp  gmp.h  libeigen.cpp  libeigen.h  libgmp.cpp  libgmp.h  libonnx.cpp  libonnx.h  libqsopt_ex.cpp  libqsopt_ex.h  libsoplex.cpp  libsoplex.h  libxtensor.cpp  libxtensor.h  qsopt_ex.cpp  qsopt_ex.h  qsoptex.cpp  qsoptex.h  soplex.cpp  soplex.h
dlinear/mps/: BUILD.bazel  BoundType.cpp  BoundType.h  Driver.cpp  Driver.h  Makefile  Sense.cpp  Sense.h  lex.yy.c  parser.tab.h  parser.yy  scanner.h  scanner.ll  test.cpp
dlinear/nn/: BUILD.bazel  Matrix.cpp  Matrix.h  NeuralNetworkModel.cpp  NeuralNetworkModel.h  NodeOpType.cpp  NodeOpType.h
dlinear/parser/: BUILD.bazel  Driver.cpp  Driver.h
dlinear/smt2/: BUILD.bazel  Command.cpp  Command.h  CommandCell.cpp  CommandCell.h  Driver.cpp  Driver.h  FunctionDefinition.cpp  FunctionDefinition.h  Term.cpp  Term.h  logic.cpp  logic.h  parser.yy  run.cpp  run.h  scanner.h  scanner.ll  smt2.h  sort.cpp  sort.h
dlinear/solver/: BUILD.bazel  Bound.cpp  Bound.h  BoundImplicator.cpp  BoundImplicator.h  BoundIterator.cpp  BoundIterator.h  BoundPreprocessor.cpp  BoundPreprocessor.h  BoundVector.cpp  BoundVector.h  CadicalSatSolver.cpp  CadicalSatSolver.h  CompleteSoplexTheorySolver.cpp  CompleteSoplexTheorySolver.h  Context.cpp  Context.h  ContextBoundIterator.cpp  ContextBoundIterator.h  ContextBoundPreprocessor.cpp  ContextBoundPreprocessor.h  ContextBoundVector.cpp  ContextBoundVector.h  ContextImpl.cpp  ContextImpl.h  DeltaQsoptexTheorySolver.cpp  DeltaQsoptexTheorySolver.h  DeltaSoplexTheorySolver.cpp  DeltaSoplexTheorySolver.h  GuidedConstraint.cpp  GuidedConstraint.h  LeakyReluConstraint.cpp  LeakyReluConstraint.h  Logic.cpp  Logic.h  LpColBound.cpp  LpColBound.h  LpResult.cpp  LpResult.h  LpRowSense.cpp  (+58 more)
dlinear/symbolic/: BUILD.bazel  BoxedCell.cpp  BoxedCell.h  Environment.cpp  Environment.h  Expression.cpp  Expression.h  ExpressionCell.cpp  ExpressionCell.h  ExpressionEvaluator.cpp  ExpressionEvaluator.h  ExpressionKind.cpp  ExpressionKind.h  FormulaVisitor.cpp  FormulaVisitor.h  GenericExpressionVisitor.h  GenericFormulaVisitor.h  IfThenElseEliminator.cpp  IfThenElseEliminator.h  LinearFormulaFlattener.cpp  LinearFormulaFlattener.h  NaiveCnfizer.cpp  NaiveCnfizer.h  Nnfizer.cpp  Nnfizer.h  PlaistedGreenbaumCnfizer.cpp  PlaistedGreenbaumCnfizer.h  PredicateAbstractor.cpp  PredicateAbstractor.h  PrefixPrinter.cpp  PrefixPrinter.h  TseitinCnfizer.cpp  TseitinCnfizer.h  Variable.cpp  Variable.h  Variables.cpp  Variables.h  environment.h  literal.cpp  literal.h  (+4 more)
dlinear/util/: ArgParser.cpp  ArgParser.h  BUILD.bazel  BitIncrementIterator.cpp  BitIncrementIterator.h  Box.cpp  Box.h  Config.cpp  Config.h  Context.cpp  Context.h  Graph.hpp  Infinity.cpp  Infinity.h  Interval.cpp  Interval.h  NumericDataContainer.hpp  OptionValue.cpp  OptionValue.h  OptionValue.hpp  PlaistedGreenbaumCnfizer.cpp  PlaistedGreenbaumCnfizer.h  PredicateAbstractor.cpp  PredicateAbstractor.h  RoundingModeGuard.hpp  ScopedUnorderedMap.hpp  ScopedUnorderedSet.hpp  ScopedVector.hpp  SignalHandlerGuard.cpp  SignalHandlerGuard.h  SortedVector.cpp  SortedVector.hpp  Stats.cpp  Stats.h  Timer.cpp  Timer.h  assert.h  concepts.h  definitions.h  error.h  (+12 more)
docs/: BUILD.bazel  Benchmarks.md  Changelog.md  Compilation.md  Doxyfile  Installation.md  Library.md  Pydlinear.md  Theory.md  Todo.md  Usage.md
docs/_static/: doxygen-awesome-darkmode-toggle.js  doxygen-awesome.css  footer.html  header.html  mermaid.css  theme.css
docs/filters/: markdown.sh
docs/presentation/: Presentation.md  README.md  Strict-inequalities.md
docs/proofs/: index.tex
docs/tacas/: .gitignore  glossary.tex  notes.tex  resources.bib  setup.tex  splncs04.bst  tacas.tex
docs/thesis/: glossary.tex  index.tex  resources.bib  setup.tex
mps/: BUILD.bazel  parser.tab.c  parser.y  parser.yy  scanner.h  scanner.ll
package/: BUILD.bazel
package/debian/: changelog  control  copyright  rules
pydlinear/: BUILD.bazel  __init__.py  __init__.pyi  __main__.py  _stubgen.py  interrupt.cpp  interrupt.h  lib.cpp  main.cpp  pydlinear.cpp  pydlinear.h  solver.cpp  stubgen.py  symbolic.cpp  test.h  util.cpp
pydlinear/test/: BUILD.bazel  TestExpression.py  TestSmt2Driver.py  TestSolver.py  TestVariable.py
test/libs/: BUILD.bazel  TestGmp.cpp  TestQsoptEx.cpp  TestSoplex.cpp
test/smt2/: BUILD.bazel  TestCommand.cpp  TestFunctionDefinition.cpp  TestSmt2.cpp  TestSmt2.py  TestSmt2Driver.cpp  TestSort.cpp  TestTerm.cpp
test/solver/: BUILD.bazel  MainTestSolver.cpp  TesBoundedPolynomialPreprocessor.cpp  TestBoundIterator.cpp  TestBoundPreprocessor.cpp  TestBoundVector.cpp  TestCadicalSatSolver.cpp  TestCompleteLpSolver.cpp  TestCompleteSmt2.cpp  TestCompleteVnnlib.cpp  TestContext.cpp  TestDeltaMps.cpp  (+18 more)
tools/: BUILD.bazel  bash_autocomplete.py  cc_import_foreign.bzl  cpplint.bzl  deps.bzl  dlinear.bzl  dwyu.bzl  generate_version_header.sh  git_archive.bzl  github.bzl  ignore_includes.json  lexyacc.bzl  local.bzl  mappings.imp  pytest.bzl  requirements.txt  var.bzl  workspace_status.sh
(+588 files in other folders)
