workspace(name = "dlinear")

load("//tools:github.bzl", "github_archive")

github_archive(
    name = "rules_foreign_cc",  # rules_foreign_cc for building C++ libraries with other build systems
    commit = "0.9.0",
    repository = "bazelbuild/rules_foreign_cc",
    sha256 = "2a4d07cd64b0719b39a7c12218a3e507672b82a97b98c6a89d38565894cf7c51",
)

github_archive(
    name = "cpplint",  # Google C++ Style Guide
    build_file = "//third_party:cpplint.BUILD.bazel",
    commit = "1.6.1",
    repository = "cpplint/cpplint",
    sha256 = "7be47998c4bd590e229cf94f3312c46563d3ee35ea037b4ed389720f510029d6",
)

github_archive(
    name = "com_google_googletest",  # Google Test suite
    commit = "v1.14.0",
    repository = "google/googletest",
    sha256 = "8ad598c73ad796e0d8280b082cebd82a630d73e73cd3c70057938a6501bba5d7",
)

github_archive(
    name = "spdlog",  # spdlog
    build_file = "//third_party:spdlog.BUILD.bazel",
    commit = "v1.12.0",
    repository = "gabime/spdlog",
    sha256 = "4dccf2d10f410c1e2feaff89966bfc49a1abb29ef6f08246335b110e001e09a9",
)

github_archive(
    name = "argparse",  # argparse for C++
    build_file = "//third_party:argparse.BUILD.bazel",
    commit = "v2.9",
    repository = "p-ranav/argparse",
    sha256 = "cd563293580b9dc592254df35b49cf8a19b4870ff5f611c7584cf967d9e6031e",
)

github_archive(
    name = "soplex",  # linear programming solver
    build_file = "//third_party:soplex.BUILD.bazel",
    commit = "release-603",
    repository = "scipopt/soplex",
    sha256 = "2bdf9adc9ac6ad48f98056679b7b852e626ac4aaaf277e7d4ce17794ed1097be",
)

github_archive(
    name = "qsopt_ex",  # delta-complete linear programming solver
    build_file = "//third_party:qsopt_ex.BUILD.bazel",
    commit = "cfcd4f285cd28ad3f76ff6691b134cae41baa230",
    repository = "martinjos/qsopt-ex",
    sha256 = "84c2ea9656e6ef75e957f888d6a044189859752fa586c2f8477c6707787491c3",
)

github_archive(
    name = "zlib",  # zlib compression library
    build_file = "//third_party:zlib.BUILD.bazel",
    commit = "v1.2.13",
    repository = "madler/zlib",
    sha256 = "1525952a0a567581792613a9723333d7f8cc20b87a81f920fb8bc7e3f2251428",
)

github_archive(
    name = "tl_optional",  # tl optional library that extends std::optional
    build_file = "//third_party:tl_optional.BUILD.bazel",
    commit = "v1.1.0",
    repository = "TartanLlama/optional",
    sha256 = "88ece79f3de5ccaec4191951a222f95cc80c4381dafd3163bdb1ff87cedf3118",
)

github_archive(
    name = "picosat",  # MIT
    build_file = "//third_party:picosat.BUILD.bazel",
    commit = "4ee7aa1d1c645df8fa9daa07f2be17c6d03b35fc",  # master
    repository = "dreal-deps/picosat",
    sha256 = "1be461d3659d4e3dc957a718ed295941c38dc822fd22a67f4cb5d180f0b6a7a3",
)

github_archive(
    name = "flex_lexer",  # flex header
    build_file = "//third_party:flex_lexer.BUILD.bazel",
    commit = "v2.6.4",
    repository = "westes/flex",
    sha256 = "4df278468142e457a9e5f6492a7d39fdb34bd7e7d42ec21b3c382889b34cfefe",
)

github_archive(
    name = "bazel_skylib",
    commit = "1.4.2",
    repository = "bazelbuild/bazel-skylib",
    sha256 = "de9d2cedea7103d20c93a5cc7763099728206bd5088342d0009315913a592cc0",
)

# https://groups.google.com/forum/#!topic/bazel-discuss/Ndd820uaq2U
new_local_repository(
    name = "linux_libs",
    build_file = "//third_party:linux_libs.BUILD.bazel",
    path = "/usr/lib/x86_64-linux-gnu",
)

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

rules_foreign_cc_dependencies()

load("//tools/lexyacc:lexyacc.bzl", "register_toolchain")

register_toolchain("linux")
