workspace(name = "dlinear")

load("//tools:git_archive.bzl", "github_archive", "gitlab_archive")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

github_archive(
    name = "rules_python",
    commit = "0.25.0",
    repository = "bazelbuild/rules_python",
    sha256 = "5868e73107a8e85d8f323806e60cad7283f34b32163ea6ff1020cf27abef6036",
)

github_archive(
    name = "rules_foreign_cc",  # Apache License 2.0 | rules_foreign_cc for building C++ libraries with other build systems
    commit = "0.9.0",
    repository = "bazelbuild/rules_foreign_cc",
    sha256 = "2a4d07cd64b0719b39a7c12218a3e507672b82a97b98c6a89d38565894cf7c51",
)

github_archive(
    name = "cpplint",  # https://github.com/cpplint/cpplint/blob/develop/LICENSE | Google C++ Style Guide
    build_file = "//third_party:cpplint.BUILD.bazel",
    commit = "1.6.1",
    repository = "cpplint/cpplint",
    sha256 = "7be47998c4bd590e229cf94f3312c46563d3ee35ea037b4ed389720f510029d6",
)

github_archive(
    name = "com_google_googletest",  # BSD 3-Clause | Google Test suite
    commit = "v1.14.0",
    repository = "google/googletest",
    sha256 = "8ad598c73ad796e0d8280b082cebd82a630d73e73cd3c70057938a6501bba5d7",
)

github_archive(
    name = "spdlog",  # MIT | spdlog
    build_file = "//third_party:spdlog.BUILD.bazel",
    commit = "v1.12.0",
    repository = "gabime/spdlog",
    sha256 = "4dccf2d10f410c1e2feaff89966bfc49a1abb29ef6f08246335b110e001e09a9",
)

github_archive(
    name = "argparse",  # MIT | argparse for C++
    build_file = "//third_party:argparse.BUILD.bazel",
    commit = "v2.9",
    repository = "p-ranav/argparse",
    sha256 = "cd563293580b9dc592254df35b49cf8a19b4870ff5f611c7584cf967d9e6031e",
)

github_archive(
    name = "soplex",  # Apache License 2.0 | linear programming solver
    build_file = "//third_party:soplex.BUILD.bazel",
    commit = "00b608823b00e7829aea71d99e17fb89f7f6af74",
    repository = "scipopt/soplex",
    sha256 = "ac5578f9c1660e46ccf3261b9f49b921fb1cd44b4d935fb3d21ae52a1a8101ec",
)

github_archive(
    name = "qsopt_ex",  # GNU General Public License v3.0 | delta-complete linear programming solver
    build_file = "//third_party:qsopt_ex.BUILD.bazel",
    commit = "cfcd4f285cd28ad3f76ff6691b134cae41baa230",
    repository = "martinjos/qsopt-ex",
    sha256 = "84c2ea9656e6ef75e957f888d6a044189859752fa586c2f8477c6707787491c3",
)

github_archive(
    name = "zlib",  # https://github.com/madler/zlib/blob/develop/LICENSE | zlib compression library
    build_file = "//third_party:zlib.BUILD.bazel",
    commit = "v1.2.13",
    repository = "madler/zlib",
    sha256 = "1525952a0a567581792613a9723333d7f8cc20b87a81f920fb8bc7e3f2251428",
)

github_archive(
    name = "picosat",  # MIT
    build_file = "//third_party:picosat.BUILD.bazel",
    commit = "ee542566ca89717af1b4558b0b3f226eb3b6b42d",  # master
    repository = "dreal-deps/picosat",
    sha256 = "9a047b7ba3ac1075a2288d35045585e2e3c24961f078f30ad97a313b8e539eb2",
)

github_archive(
    name = "flex_lexer",  # BSD | Flex header for C++
    build_file = "//third_party:flex_lexer.BUILD.bazel",
    commit = "v2.6.4",
    repository = "westes/flex",
    sha256 = "4df278468142e457a9e5f6492a7d39fdb34bd7e7d42ec21b3c382889b34cfefe",
)

github_archive(
    name = "bazel_skylib",  # Apache License 2.0
    commit = "1.4.2",
    repository = "bazelbuild/bazel-skylib",
    sha256 = "de9d2cedea7103d20c93a5cc7763099728206bd5088342d0009315913a592cc0",
)

github_archive(
    name = "pybind11_bazel",  # https://github.com/pybind/pybind11_bazel/blob/master/LICENSE
    commit = "v2.11.1",
    repository = "pybind/pybind11_bazel",
    sha256 = "e8355ee56c2ff772334b4bfa22be17c709e5573f6d1d561c7176312156c27bd4",
)

github_archive(
    name = "pybind11",  # https://github.com/pybind/pybind11/blob/master/LICENSE
    build_file = "@pybind11_bazel//:pybind11.BUILD",
    commit = "v2.11.1",
    repository = "pybind/pybind11",
    sha256 = "d475978da0cdc2d43b73f30910786759d593a9d8ee05b1b6846d1eb16c6d2e0c",
)

github_archive(
    name = "com_github_nelhage_rules_boost",  # Apache License 2.0 | Integration of Boost into Bazel
    commit = "3649e5ea16a1ed85e45a809c165a3540bd701849",
    repository = "nelhage/rules_boost",
    sha256 = "e484ad49ceec1843c2fa0f6fcf90c631d52fd97a96105d2fb75d8f4c2fa58c0b",
)

github_archive(
    name = "bzip2lib",  # https://github.com/libarchive/bzip2/blob/master/COPYING | Compression library
    build_file = "//third_party:bzip2lib.BUILD.bazel",
    commit = "bzip2-1.0.8",
    repository = "libarchive/bzip2",
    sha256 = "db106b740252669664fd8f3a1c69fe7f689d5cd4b132f82ba82b9afba27627df",
)

gitlab_archive(
    name = "mpfr",
    build_file = "//third_party:mpfr.BUILD.bazel",
    commit = "4.2.1",
    domain = "inria.fr",
    repository = "mpfr/mpfr",
    sha256 = "e34aab8b2cdcc3f37ef8bd1b33fcd9867b472412698c6a0ec60dbb4970f88a3d",
)

http_archive(
    name = "gmp",
    build_file = "//third_party:gmp.BUILD.bazel",
    sha256 = "a3c2b80201b89e68616f4ad30bc66aee4927c3ce50e33929ca819d5c43538898",
    strip_prefix = "gmp-6.3.0",
    url = "https://ftp.gnu.org/gnu/gmp/gmp-6.3.0.tar.xz",
)

load("//tools:deps.bzl", "load_dependencies")

load_dependencies("third_party")

load("@pip//:requirements.bzl", "install_deps")

# Call it to define repos for your requirements.
install_deps()
