load("//tools:dlinear.bzl", "dlinear_cc_binary", "dlinear_cc_library")

dlinear_cc_binary(
    name = "benchmark",
    srcs = [
        "BenchmarkProgram.cpp",
        "BenchmarkProgram.h",
        "main.cpp",
    ],
    data = glob(["smt2/**"]) + ["benchmark.conf"],
    features = ["fully_static_link"],
    linkstatic = 1,
    deps = [
        "//benchmark/util:bench_config",
        "//benchmark/util:info_gatherer",
    ],
)
