load("//tools:dlinear.bzl", "DLINEAR_NAME", "DLINEAR_VERSION", "dlinear_cc_binary", "dlinear_cc_library")
load("//tools:cpplint.bzl", "cpplint")

package(default_visibility = ["//visibility:public"])

genrule(
    name = "generate_version_header",
    outs = ["version.h"],
    cmd = "$(location //tools:generate_version_header) %s %s > $@" % (DLINEAR_NAME, DLINEAR_VERSION),
    stamp = True,
    tools = ["//tools:generate_version_header"],
    visibility = ["//visibility:private"],
)

dlinear_cc_library(
    name = "version",
    hdrs = [":generate_version_header"],
)

dlinear_cc_library(
    name = "dlinear_header",
    hdrs = ["dlinear.h"],
    deps = [
        ":version",
        "//dlinear/api",
        "//dlinear/solver:context",
        "//dlinear/solver:logic",
        "//dlinear/symbolic",
        "//dlinear/util:box",
        "//dlinear/util:config",
    ],
)

dlinear_cc_binary(
    name = "dlinear",
    srcs = ["main.cpp"],
    deps = [
        "//dlinear/solver",
        "//dlinear/util:argparser",
        "//dlinear/util:config",
    ],
)

cpplint()
